SAP_Newsletter/style.css
body {
    min-width: 220px;
  }
  
  .center {
    text-align: center;
  }
  
  .button-80 {
    background: #fff;
    backface-visibility: hidden;
    border-radius: .375rem;
    border-style: solid;
    border-width: .125rem;
    box-sizing: border-box;
    color: #212121;
    cursor: pointer;
    display: inline-block;
    font-family: "Museo Sans", sans-serif;
    font-size: 0.75rem;
    font-weight: 700;
    letter-spacing: -.01em;
    line-height: 1.3;
    padding: .775rem 1rem;
    position: relative;
    text-align: left;
    text-decoration: none;
    transform: translateZ(0) scale(1);
    transition: transform .2s, opacity .2s;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
  }
  
  .button-80:not(:disabled):hover {
    transform: scale(1.05);
    opacity: 0.8; /* Added opacity value */
  }
  
  .button-80:not(:disabled):hover:active {
    transform: scale(1.05) translateY(.125rem);
  }
  
  .button-80:focus {
    outline: 0 solid transparent;
  }
  
  .button-80:focus:before {
    content: "";
    left: calc(-1 * .375rem);
    pointer-events: none;
    position: absolute;
    top: calc(-1 * .375rem);
    transition: border-radius;
    user-select: none;
  }
  
  .button-80:focus:not(:focus-visible) {
    outline: 0 solid transparent;
  }
  
  .button-80:focus:not(:focus-visible):before {
    border-width: 0;
  }
  
  .button-80:not(:disabled):active {
    transform: translateY(.125rem);
  }
  
  .button-80:not(:disabled):hover {
    background: #0563C1;
    color: #fff;
    transform: scale(1.05);
  }
  
  /*************************************************JS STYLES**************************************************************/

  p.positions {
    font-size: 16px;
    color: #008FD3;
  }
  /* Font Definitions */
  @font-face {
    font-family: Wingdings;
    panose-1: 5 0 0 0 0 0 0 0 0 0;
  }

  @font-face {
    font-family: "Cambria Math";
    panose-1: 2 4 5 3 5 4 6 3 2 4;
  }

  @font-face {
    font-family: Calibri;
    panose-1: 2 15 5 2 2 2 4 3 2 4;
  }

  /* Style Definitions */
  p.MsoNormal,
  li.MsoNormal,
  div.MsoNormal {
    margin: 0cm;
    font-size: 12.0pt;
    font-family: "Times New Roman", serif;
    color: #222222;
  }

  a:link,
  span.MsoHyperlink {
    mso-style-priority: 99;
    color: #0563C1;
    text-decoration: underline;
  }

  span.MsoSmartlink {
    mso-style-priority: 99;
    color: blue;
    background: #F3F2F1;
    text-decoration: underline;
  }

  p.boxbullet,
  li.boxbullet,
  div.boxbullet {
    mso-style-name: boxbullet;
    mso-style-priority: 99;
    margin-top: 3.75pt;
    margin-right: 0cm;
    margin-bottom: 3.75pt;
    margin-left: 0cm;
    line-height: 15.75pt;
    font-size: 12.0pt;
    font-family: "Times New Roman", serif;
    color: #666666;
  }

  p.header,
  li.header,
  div.header {
    mso-style-name: header;
    mso-style-priority: 99;
    margin-top: 0cm;
    margin-right: 0cm;
    margin-bottom: 3.75pt;
    margin-left: 0cm;
    mso-line-height-alt: 17.25pt;
    font-size: 18.0pt;
    font-family: "Arial", sans-serif;
    color: black;
    font-weight: bold;
  }

  p.subheader,
  li.subheader,
  div.subheader {
    mso-style-name: subheader;
    mso-style-priority: 99;
    margin-top: 3.75pt;
    margin-right: 0cm;
    margin-bottom: 3.75pt;
    margin-left: 0cm;
    line-height: 15.0pt;
    font-size: 15.0pt;
    font-family: "Arial", sans-serif;
    color: black;
  }

  p.footer,
  li.footer,
  div.footer {
    mso-style-name: footer;
    mso-style-priority: 99;
    mso-margin-top-alt: auto;
    margin-right: 0cm;
    mso-margin-bottom-alt: auto;
    margin-left: 0cm;
    line-height: 9.0pt;
    font-size: 7.5pt;
    font-family: "Arial", sans-serif;
    color: #666666;
  }

  p.headline1,
  li.headline1,
  div.headline1 {
    mso-style-name: headline_1;
    mso-style-priority: 99;
    margin-top: 18.75pt;
    margin-right: 0cm;
    mso-margin-bottom-alt: auto;
    margin-left: 0cm;
    line-height: 14.25pt;
    font-size: 12.0pt;
    font-family: "Arial", sans-serif;
    color: #222222;
    text-transform: uppercase;
    font-weight: bold;
  }

  p.headline3,
  li.headline3,
  div.headline3 {
    mso-style-name: headline_3;
    mso-style-priority: 99;
    margin-top: 30.0pt;
    margin-right: 0cm;
    mso-margin-bottom-alt: auto;
    margin-left: 0cm;
    line-height: 12.75pt;
    font-size: 11.5pt;
    font-family: "Arial", sans-serif;
    color: #222222;
    font-weight: bold;
  }

  p.edition,
  li.edition,
  div.edition {
    mso-style-name: edition;
    mso-style-priority: 99;
    mso-margin-top-alt: auto;
    margin-right: 0cm;
    margin-bottom: 12.0pt;
    margin-left: 0cm;
    line-height: 12.0pt;
    font-size: 12.0pt;
    font-family: "Arial", sans-serif;
    color: #008FD3;
    font-weight: bold;
  }

  span.internal1 {
    mso-style-name: internal1;
    font-family: "Arial", sans-serif;
    color: black;
    font-weight: normal;
    font-style: normal;
  }

  span.disclaimer1 {
    mso-style-name: disclaimer1;
    font-family: "Arial", sans-serif;
    color: #555555;
    font-weight: normal;
    font-style: normal;
    text-decoration: none none;
  }

  span.EmailStyle31 {
    mso-style-type: personal-compose;
    font-family: "Calibri", sans-serif;
    color: windowtext;
  }

  .MsoChpDefault {
    mso-style-type: export-only;
    font-size: 10.0pt;
  }

  @page WordSection1 {
    size: 595.3pt 841.9pt;
    margin: 70.85pt 70.85pt 2.0cm 70.85pt;
  }

  div.WordSection1 {
    page: WordSection1;
  }

  /* List Definitions */
  @list l0 {
    mso-list-id: 399408308;
    mso-list-template-ids: -1723044772;
  }

  @list l0:level1 {
    mso-level-number-format: bullet;
    mso-level-text: ;
    mso-level-tab-stop: 36.0pt;
    mso-level-number-position: left;
    text-indent: -18.0pt;
    mso-ansi-font-size: 10.0pt;
    font-family: Wingdings;
  }
/* ... */

